--- a/Prawesome/res/layout/activity_first_fragment.xml
+++ b/Prawesome/res/layout/activity_first_fragment.xml
@@ -8,8 +8,10 @@
         android:id="@+id/tvFragFirst"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:textSize="26dp"
-        android:text="TextView" />
+        android:layout_marginTop="114dp"
+        android:text="TextView"
+        android:textSize="26dp" />
+
 </RelativeLayout>
