--- a/Prawesome/res/layout/activity_create.xml
+++ b/Prawesome/res/layout/activity_create.xml
@@ -2,110 +2,111 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_orange_dark"
+    android:background="@color/backgroundGrey"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.prawesome.CreateActivity" >
 
-<TextView
-    android:id="@+id/textView1"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentRight="true"
-    android:layout_alignParentTop="true"
-    android:gravity="center"
-    android:text="@string/create_activity"
-    android:textAppearance="?android:attr/textAppearanceLarge"
-    android:textSize="22sp" />
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:gravity="center|left"
+        android:text="@string/create_activity"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/logoBlue"
+        android:textSize="22sp" />
 
-<EditText
-    android:id="@+id/editText1"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_below="@+id/textView1"
-    android:layout_margin="10dp"
-    android:layout_marginTop="14dp"
-    android:layout_toLeftOf="@+id/button1"
-    android:background="@drawable/rounded_corner"
-    android:ems="10"
-    android:hint="Title" />
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView1"
+        android:layout_margin="10dp"
+        android:layout_marginTop="14dp"
+        android:layout_toLeftOf="@+id/button1"
+        android:background="@drawable/rounded_corner"
+        android:ems="10"
+        android:hint="Title" />
 
-<Button
-    android:id="@+id/button1"
-    android:layout_width="100dp"
-    android:layout_height="30dp"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentRight="true"
-    android:background="@drawable/rounded_corner"
-    android:onClick="submitActivity"
-    android:text="Submit" />
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/rounded_corner"
+        android:onClick="submitActivity"
+        android:text="Submit" />
 
-<EditText
-    android:id="@+id/editText2"
-    android:layout_width="wrap_content"
-    android:layout_height="100dp"
-    android:layout_alignLeft="@+id/editText1"
-    android:layout_alignRight="@+id/button2"
-    android:layout_below="@+id/editText1"
-    android:background="@drawable/rounded_corner"
-    android:ems="10"
-    android:hint="Description"
-    android:inputType="textMultiLine" >
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:layout_alignLeft="@+id/editText1"
+        android:layout_alignRight="@+id/button2"
+        android:layout_below="@+id/editText1"
+        android:background="@drawable/rounded_corner"
+        android:ems="10"
+        android:hint="Description"
+        android:inputType="textMultiLine" >
 
-    <requestFocus />
-</EditText>
+        <requestFocus />
+    </EditText>
 
-<EditText
-    android:id="@+id/editText3"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_below="@+id/editText2"
-    android:layout_margin="10dp"
-    android:background="@drawable/rounded_corner"
-    android:ems="10"
-    android:hint="Location" />
+    <EditText
+        android:id="@+id/editText3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editText2"
+        android:layout_margin="10dp"
+        android:background="@drawable/rounded_corner"
+        android:ems="10"
+        android:hint="Location" />
 
-<ImageView
-    android:id="@+id/imageView1"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignLeft="@+id/button2"
-    android:layout_alignTop="@+id/editText3"
-    android:src="@android:drawable/ic_menu_search" />
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button2"
+        android:layout_alignTop="@+id/editText3"
+        android:src="@android:drawable/ic_menu_search" />
 
-<EditText
-    android:id="@+id/editText5"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignLeft="@+id/editText4"
-    android:layout_alignRight="@+id/editText4"
-    android:layout_below="@+id/editText4"
-    android:background="@drawable/rounded_corner"
-    android:ems="10"
-    android:hint="Cost" />
+    <EditText
+        android:id="@+id/editText5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editText4"
+        android:layout_alignRight="@+id/editText4"
+        android:layout_below="@+id/editText4"
+        android:background="@drawable/rounded_corner"
+        android:ems="10"
+        android:hint="Cost" />
 
-<EditText
-    android:id="@+id/editText4"
-    android:layout_width="150dp"
-    android:layout_height="wrap_content"
-    android:layout_alignLeft="@+id/textView1"
-    android:layout_below="@+id/editText3"
-    android:layout_margin="10dp"
-    android:background="@drawable/rounded_corner"
-    android:ems="10"
-    android:hint="Timeframe" />
+    <EditText
+        android:id="@+id/editText4"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_below="@+id/editText3"
+        android:layout_margin="10dp"
+        android:background="@drawable/rounded_corner"
+        android:ems="10"
+        android:hint="Timeframe" />
 
-<Button
-    android:id="@+id/button2"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignBottom="@+id/editText1"
-    android:layout_alignRight="@+id/textView1"
-    android:layout_alignTop="@+id/editText1"
-    android:background="@drawable/rounded_corner"
-    android:text="Image..." />
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/editText1"
+        android:layout_alignRight="@+id/textView1"
+        android:layout_alignTop="@+id/editText1"
+        android:background="@drawable/rounded_corner"
+        android:text="Image..." />
 
 </RelativeLayout>
