--- a/Prawesome/res/layout/activity_splash.xml
+++ b/Prawesome/res/layout/activity_splash.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.prawesome.SplashActivity" 
-    android:background="#2b2b2b">
+    android:background="@color/backgroundGrey">
 
     <ImageView
         android:id="@+id/imageView1"
