--- a/Prawesome/res/values/colors.xml
+++ b/Prawesome/res/values/colors.xml
@@ -1,5 +1,8 @@
 <resources>
 
     <color name="black_overlay">#66000000</color>
+    <color name="white">#ffffff</color>
+    <color name="backgroundGrey">#2b2b2b</color>
+    <color name="logoBlue">#63cdfe</color>
 
 </resources>
