Detailed view shows description, location, cost and time. Changed detailed view layout. Add activity checks if all fields are filled, doesn't work with integer fields (cost, time).

--- a/Prawesome/res/layout/activity_create.xml
+++ b/Prawesome/res/layout/activity_create.xml
@@ -98,7 +98,8 @@
         android:layout_marginTop="18dp"
         android:background="@drawable/rounded_corner"
         android:ems="10"
-        android:hint="Timeframe" />
+        android:inputType="number"
+        android:hint="Timeframe (min)" />
 
     <EditText
         android:id="@+id/Cost"
@@ -109,6 +110,7 @@
         android:layout_below="@+id/Location"
         android:background="@drawable/rounded_corner"
         android:ems="10"
-        android:hint="Cost" />
+        android:inputType="number"
+        android:hint="Cost (€)" />
 
 </RelativeLayout>
