--- a/Prawesome/res/layout/activity_splash.xml
+++ b/Prawesome/res/layout/activity_splash.xml
@@ -13,8 +13,9 @@
         android:id="@+id/imageView1"
         android:layout_width="fill_parent"
         android:layout_height="40dp"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="191dp"
         android:scaleType="fitXY"
         android:src="@drawable/logo" />
 
