Added local database debug activity

--- a/Prawesome/res/menu/main.xml
+++ b/Prawesome/res/menu/main.xml
@@ -23,5 +23,10 @@
         android:orderInCategory="110"
         android:title="@string/db_string"
         app:showAsAction="never"/>
+        <item
+        android:id="@+id/action_ldb"
+        android:orderInCategory="110"
+        android:title="@string/local_db_string"
+        app:showAsAction="never"/>
 
 </menu>
