Added local data base debug to data base debug menu and vise versa

--- a/Prawesome/res/menu/data_base_debug.xml
+++ b/Prawesome/res/menu/data_base_debug.xml
@@ -8,5 +8,10 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/action_ldb"
+        android:orderInCategory="110"
+        android:title="@string/local_db_string"
+        app:showAsAction="never"/>
 
 </menu>
