--- a/Prawesome/res/menu/local_data_base_debug_activity.xml
+++ b/Prawesome/res/menu/local_data_base_debug_activity.xml
@@ -8,5 +8,10 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/action_db"
+        android:orderInCategory="110"
+        android:title="@string/db_string"
+        app:showAsAction="never"/>
 
 </menu>
