--- a/Prawesome/res/layout/activity_create.xml
+++ b/Prawesome/res/layout/activity_create.xml
@@ -23,7 +23,7 @@
         android:textSize="22sp" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/non_to_show_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView1"
@@ -50,9 +50,9 @@
         android:id="@+id/Description"
         android:layout_width="wrap_content"
         android:layout_height="100dp"
-        android:layout_alignLeft="@+id/editText1"
+        android:layout_alignLeft="@+id/non_to_show_message"
         android:layout_alignRight="@+id/button2"
-        android:layout_below="@+id/editText1"
+        android:layout_below="@+id/non_to_show_message"
         android:background="@drawable/rounded_corner"
         android:ems="10"
         android:hint="Description"
@@ -66,9 +66,9 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/editText1"
+        android:layout_alignBottom="@+id/non_to_show_message"
         android:layout_alignRight="@+id/textView1"
-        android:layout_alignTop="@+id/editText1"
+        android:layout_alignTop="@+id/non_to_show_message"
         android:background="@drawable/rounded_corner"
         android:text="Image..." />
 
