--- a/Prawesome/res/layout/activity_splash.xml
+++ b/Prawesome/res/layout/activity_splash.xml
@@ -7,7 +7,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.prawesome.SplashActivity" 
-    android:background="@color/backgroundGrey">
+	android:background="@drawable/background"
+	>
 
     <ImageView
         android:id="@+id/imageView1"
@@ -19,3 +20,5 @@
         android:src="@drawable/logo" />
 
 </RelativeLayout>
+
+<!--    android:background="@color/backgroundGrey"  -->
