--- a/Prawesome/res/layout-land/activity_create.xml
+++ b/Prawesome/res/layout-land/activity_create.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.prawesome.CreateActivity" >
+    tools:context="prawesome.CreateActivity" >
 
     <TextView
         android:id="@+id/textView1"
