--- a/Prawesome/res/layout/activity_detail.xml
+++ b/Prawesome/res/layout/activity_detail.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.prawesome.DetailActivity" 
+    tools:context="prawesome.DetailActivity" 
     android:background="@color/backgroundGrey">
 
     <TextView
