--- a/Prawesome/res/layout/activity_splash.xml
+++ b/Prawesome/res/layout/activity_splash.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.prawesome.SplashActivity" 
+    tools:context="prawesome.SplashActivity" 
 	android:background="@drawable/background"
 	>
 
