Not now and Never buttons return to fragment and set activity fragment ignored true Removed data base debug from menu

--- a/Prawesome/res/menu/local_data_base_debug_activity.xml
+++ b/Prawesome/res/menu/local_data_base_debug_activity.xml
@@ -7,11 +7,5 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never"/>
-    <item
-        android:id="@+id/action_db"
-        android:orderInCategory="110"
-        android:title="@string/db_string"
-        app:showAsAction="never"/>
-
+        android:showAsAction="never"/>
 </menu>
