--- a/Prawesome/res/menu/main.xml
+++ b/Prawesome/res/menu/main.xml
@@ -7,25 +7,20 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never"/>
+        android:showAsAction="never"/>
     <item
         android:id="@+id/add_activity"
         android:orderInCategory="90"
         android:title="@string/add_activity"
-        app:showAsAction="never"/>
+       	android:showAsAction="never"/>
     <item
         android:id="@+id/action_about"
         android:orderInCategory="110"
         android:title="@string/about"
-        app:showAsAction="never"/>
-    <item
-        android:id="@+id/action_db"
-        android:orderInCategory="110"
-        android:title="@string/db_string"
-        app:showAsAction="never"/>
+        android:showAsAction="never"/>
     <item
         android:id="@+id/action_ldb"
         android:orderInCategory="110"
         android:title="@string/local_db_string"
-        app:showAsAction="never"/>
+        android:showAsAction="never"/>
 </menu>
